Add POST, PUT and DELETE routes
